glibc-builder/glibc-2.35/build/conform/symlist-XPG42.err
In file included from /tmp/tmpor449qoo/test.c:1:
/usr/lib/gcc/x86_64-linux-gnu/11/include/varargs.h:4:2: error: #error "GCC no longer implements <varargs.h>."
    4 | #error "GCC no longer implements <varargs.h>."
      |  ^~~~~
/usr/lib/gcc/x86_64-linux-gnu/11/include/varargs.h:5:2: error: #error "Revise your code to use <stdarg.h>."
    5 | #error "Revise your code to use <stdarg.h>."
      |  ^~~~~
/tmp/tmpg8bx1hux/test.c:1:10: fatal error: ndbm.h: No such file or directory
    1 | #include <ndbm.h>
      |          ^~~~~~~~
compilation terminated.
